amf-client/shared/src/test/resources/parser-results/raml/error/cycle-references/yaKassa.raml
#%RAML 1.0 Library
uses:
  Base: base.raml

types:
  InvoiceId:
    type: integer
    description: